--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,15 @@
 @tailwind utilities;
 
 
-body {
+* {
   font-family: 'Poppins', sans-serif;
 }
 
-:root {
-  --azul-principal: #4acabb;
-  --verde-escuro: #004d40;
-  --roxo-escuro: #571e4f;
-  --bg-clarinho: #f5f8ff;
-  --quase-branco: #fafafa;
+@theme {
+  --color-azul-principal: #4acabb;
+  --color-verde-escuro: #004d40;
+  --color-roxo-escuro: #571e4f;
+  --color-bg-clarinho: #f5f8ff;
+  --color-quase-branco: #fafafa;
 }
 
-
-.bg-azul-principal { background-color: var(--azul-principal); }
-.bg-verde-escuro { background-color: var(--verde-escuro); }
-.bg-bg-clarinho { background-color: var(--bg-clarinho); }
-.text-roxo-escuro { color: var(--roxo-escuro); }
