--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,18 @@
 }
 
 @theme {
-  --color-azul-principal: #4acabb;
-  --color-verde-escuro: #004d40;
-  --color-roxo-escuro: #571e4f;
-  --color-bg-clarinho: #f5f8ff;
-  --color-quase-branco: #fafafa;
+    --color-azul-principal: #4acabb;
+    --color-verde-claro: #cbe5c0;
+    --color-amarelo-claro: #fcf9c2;
+    --color-rosa-claro: #edc5bd;
+    --color-roxo-escuro: #571e4f;
+    --color-texto-escuro: #2d2d2d;
+    --color-branco: #ffffff;
+    --color-verde-escuro: #004d40;
+    --color-verde-escuro2: #00796b;
+    --color-quase-branco: #fafafa;
+    --color-verde-musgo: #2e7d3;
+    --color-bg-clarinho: #f5f8ff;
+    --color-bg-escurinho:#eefafc;
 }
-
+ 
